# enhanced-word-live

./: CLAUDE.md  LIVE_EDITING_UPGRADE_SUMMARY.md  QUICK_START_GUIDE.md  README.md  README_ENHANCED.md  REGEX_CORRUPTION_ANALYSIS.md  REGEX_FIX_SUMMARY.md  WordAddIn.txt  claude_desktop_config.json  comprehensive_test_document.docx  comprehensive_test_document_backup.docx  create_test_document.py  enhanced_search_replace.py  index.js  package.json  pyproject.toml  regex_test_copy_project.docx  regex_test_document.docx  regex_test_document_copy.docx  regex_test_document_fixed.docx  requirements.txt  setup-chatgpt-integration.sh  start-live-editing.bat  start-live-editing.sh  test_both_versions.py  test_consolidated_complete.py  test_consolidated_tools.py  test_enhanced_features.docx  test_enhanced_features.py  test_fixed_regex.py  test_live_editing_upgrade.py  test_regex_corruption.py  test_session_and_comments.py  test_session_comments.py
.serena/: project.yml
.serena/cache/: document_symbols_cache_v20-05-25.pkl
.serena/memories/: bug_analysis_previous_version.md  bug_fixes_applied.md  bug_fixes_verification_current_version.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
word-live-addin/: README.md  manifest.xml  package.json
word_document_server/: main.py  session_manager.py
word_document_server/tools/: __init__.py  content_tools.py  document_tools.py  extended_document_tools.py  footnote_tools.py  protection_tools.py  review_tools.py  section_tools.py  session_tools.py
(+5 files in other folders)
